# governed-second-brain

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md  governance-map.md  ownership-taxonomy.md
.github/agents/: README.md  azure-aks.agent.md  azure-apim.agent.md  azure-container-apps.agent.md  azure-foundry.agent.md  azure-redis.agent.md  business-strategy-agent.agent.md  competitive-intelligence-agent.agent.md  enterprise-connectors.agent.md  platform-quality.agent.md  pr-evaluator.agent.md  process-management-agent.agent.md  python-specialist.agent.md  risk-analysis-agent.agent.md  rust-specialist.agent.md  tech-manager.agent.md
.github/instructions/: content-visibility.instructions.md  governance-boundary.instructions.md  interaction-capture.instructions.md  sqlite-read-model-boundary.instructions.md  tool-usage.instructions.md
.github/prompts/: azure-migrate.prompt.md  azure-troubleshoot.prompt.md  business-financial-modeling.prompt.md  business-risk-assessment.prompt.md  migration-plan.prompt.md  platform-dependency-audit.prompt.md  python-implement.prompt.md  python-review.prompt.md  tech-debt-assessment.prompt.md  tech-lead-innovation-research.prompt.md  typescript-implement.prompt.md  ui-accessibility-audit.prompt.md  weekly-review.prompt.md
data/: README.md
data/memory/: .gitkeep
docs/: README.md
examples/: seed_records.py  weekly_review.py
infra/: README.md
memory/: README.md
src/: README.md
tests/: test_embeddings.py  test_events.py  test_gate.py  test_memory.py  test_mirror.py  test_semantic.py  test_visibility.py
(+105 files in other folders)
